# build-it-agent

./: .defender-submit.txt  .gitignore  ACTION_CHECKLIST.md  BuildIT-CodeSigning.cer  CHANGES_SUMMARY.md  Cargo.toml  GITHUB_ACTIONS.md  QUICK_FIX.md  README.md  WINDOWS_DEFENDER_FIX.md  WORKFLOW_MERGE.md  build.rs  languages.json
.github/workflows/: release.yml
resources/windows/: build-it-agent.manifest  build-it-agent.rc
scripts/: add-defender-exclusion.bat  install.sh  sign-executable.ps1  smoke_rust.sh  smoke_test.sh  uninstall.sh
scripts/linux/: build-it-agent.service  install.sh  package_deb.sh
scripts/macos/: build_release.sh  make_pkg.sh  test.sh
scripts/macos/templates/: com.build-it.agent.plist
src/: executor.rs  language.rs  language_detector.rs  lib.rs  local_code_exec.rs  main.rs  monitor.rs  queue.rs  rusq.rs  types.rs
tests/: integration_tests.rs
