[package]
name = "build-it-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "macros", "process", "sync", "time", "fs", "io-util"] }
axum = "0.7"
anyhow = "1.0"
crossbeam-channel = "0.5"
tempfile = "3.10"
futures = "0.3.31"
clap = { version = "4.0", features = ["derive"] }
core_affinity = "0.8"
num_cpus = "1.0"

tower-http = { version = "0.6", features = ["cors"] }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
core-foundation = "0.9"
core-graphics = "0.24"
objc = "0.2"
cocoa = "0.24"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
