[package]
name = "build-it-agent"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "build-it-agent"
path = "src/main.rs"

[lib]
name = "build_it_agent"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "macros", "process", "sync", "time", "fs", "io-util"] }
axum = "0.7"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
tempfile = "3.10"

# Cross-platform process detection
sysinfo = "0.30"
which = "8.0.0"
futures = "0.3.31"

tower-http = { version = "0.6", features = ["cors"] }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
core-foundation = "0.9"
core-graphics = "0.24"
objc = "0.2.7"
cocoa = "0.25"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
